--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,6 @@ and open the template in the editor.
 
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="container"></div>
     </body>
 </html>
