Div realizados para el menu y la disposición de las imágenes

--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,13 @@ and open the template in the editor.
 
     </head>
     <body>
-        <div class="container"></div>
+        <div class="container"><!-- Marco exterior de la página web-->
+            <div class="header"><!-- Menú -->
+                
+            </div>
+            <div class="images"><!-- Imágenes de la página-->
+                
+            </div>
+        </div>
     </body>
 </html>
