--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,12 @@
 		<div id="informacion2" >
 		
 			<img class="img-responsive" src="img/logo-mob.jpg" />
+                            <div class="row">
+                                <div class="col-md-2 col-xs-6 "><input class="imp-responsive" type="submit" value="WORKS"></div>
+                                <div class="col-md-2 col-xs-6 "><input class="imp-responsive" type="submit" value="PREMIOS"></div>
+                                <div class="col-md-2 col-xs-6 "><input class="imp-responsive" type="submit" value="NOSOTROS"></div>
+                                <div class="col-md-2 col-xs-6 "><input class="imp-responsive" type="submit" value="CONTACTO"></div>
+                            </div>
 		</div>	
 	</div>
 
@@ -61,47 +67,47 @@
 
       <div class="row">
 
-        <div class=" col-md-offset-2 col-md-2 col-xs-6 "><span>DEMO REEL Vessmedia 2012</span><img src="img/1.jpg" /></div>
-        <div class="col-md-2 col-xs-6 "><span>NUMBERS</span><img src="img/2.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>CD CASTELLÓN "La Fortaleza Albinegra"</span><img src="img/3.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>Plató MESTALLA</span><img src="img/4.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>PROFILTEK</span><img src="img/5.jpg" class="img-responsive" /></div>
-	<div class="hidden-md hidden-lg col-md-2 col-xs-6"><span>VLC "Una ciudad para perderse"</span><img src="img/21.jpg" class="img-responsive" /></div>
+        <div class=" col-md-offset-2 col-md-2 col-xs-12 "><span>DEMO REEL Vessmedia 2012</span><img src="img/1.jpg" /></div>
+        <div class="col-md-2 col-xs-12 "><span>NUMBERS</span><img src="img/2.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>CD CASTELLÓN "La Fortaleza Albinegra"</span><img src="img/3.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>Plató MESTALLA</span><img src="img/4.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>PROFILTEK</span><img src="img/5.jpg" class="img-responsive" /></div>
+	<div class="hidden-md hidden-lg col-md-2 col-xs-12"><span>VLC "Una ciudad para perderse"</span><img src="img/21.jpg" class="img-responsive" /></div>
       </div>
 
       <div class="row">
-        <div class=" col-md-offset-2 col-md-2 col-xs-6 "><span>MEMORY (Trailer)</span><img src="img/6.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>PRIMA</span><img src="img/7.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>VALL DE POP</span><img src="img/8.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>LOS PERROS DEL BOOGIE - De nada sirve hacerse mayor</span><img src="img/9.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>REXONA "Tú te mueves, Rexona También"</span><img src="img/10.jpg" class="img-responsive" /></div>
-	<div class="hidden-md hidden-lg col-md-2 col-xs-6"><span>MARATÓN DIVINA PASTORA</span><img src="img/22.jpg" class="img-responsive" /></div>
+        <div class=" col-md-offset-2 col-md-2 col-xs-12 "><span>MEMORY (Trailer)</span><img src="img/6.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>PRIMA</span><img src="img/7.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>VALL DE POP</span><img src="img/8.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>LOS PERROS DEL BOOGIE - De nada sirve hacerse mayor</span><img src="img/9.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>REXONA "Tú te mueves, Rexona También"</span><img src="img/10.jpg" class="img-responsive" /></div>
+	<div class="hidden-md hidden-lg col-md-2 col-xs-12"><span>MARATÓN DIVINA PASTORA</span><img src="img/22.jpg" class="img-responsive" /></div>
       </div>
 
       <div class="row">
-        <div class=" col-md-offset-2 col-md-2 col-xs-6"><span>DEMO REEL VG</span><img src="img/11.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>ALCOSSEBRE</span><img src="img/12.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>VALENBISI</span><img src="img/13.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>CAC "Esta ciudad es otro mundo"</span>	<img src="img/14.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>CAC (Compositing + Breakdown)</span><img src="img/15.jpg" class="img-responsive" /></div>
-	<div class="hidden-md hidden-lg col-md-2 col-xs-6"><span>12.500 GRACIAS</span><img src="img/23.jpg" class="img-responsive" /></div>
+        <div class=" col-md-offset-2 col-md-2 col-xs-12"><span>DEMO REEL VG</span><img src="img/11.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>ALCOSSEBRE</span><img src="img/12.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>VALENBISI</span><img src="img/13.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>CAC "Esta ciudad es otro mundo"</span>	<img src="img/14.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>CAC (Compositing + Breakdown)</span><img src="img/15.jpg" class="img-responsive" /></div>
+	<div class="hidden-md hidden-lg col-md-2 col-xs-12"><span>12.500 GRACIAS</span><img src="img/23.jpg" class="img-responsive" /></div>
       </div>
 
       <div class="row">
-        <div class=" col-md-offset-2 col-md-2 col-xs-6"><span>CAC (Shooting)</span><img src="img/16.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>VCFPLAY (Logo)</span><img src="img/17.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>IMAGIK</span><img src="img/18.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>DEMO REEL DVILA</span><img src="img/19.jpg" class="img-responsive" /></div>
-        <div class="col-md-2 col-xs-6"><span>EHBOLACORP - Renacer</span><img src="img/20.jpg" class="img-responsive" /></div>
-	<div class="hidden-md hidden-lg col-md-2 col-xs-6"><span>COPA DEL REY</span><img src="img/24.jpg" class="img-responsive" /></div>
+        <div class=" col-md-offset-2 col-md-2 col-xs-12"><span>CAC (Shooting)</span><img src="img/16.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>VCFPLAY (Logo)</span><img src="img/17.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>IMAGIK</span><img src="img/18.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>DEMO REEL DVILA</span><img src="img/19.jpg" class="img-responsive" /></div>
+        <div class="col-md-2 col-xs-12"><span>EHBOLACORP - Renacer</span><img src="img/20.jpg" class="img-responsive" /></div>
+	<div class="hidden-md hidden-lg col-md-2 col-xs-12"><span>COPA DEL REY</span><img src="img/24.jpg" class="img-responsive" /></div>
       </div>
 
       <div class="row">
-        <div class="visible-md visible-lg col-md-offset-2 col-md-2 col-xs-6"><span>VLC "Una ciudad para perderse"</span><img src="img/21.jpg" alt="Logo de la compañía" /></div>
-        <div class="visible-md visible-lg col-md-2 col-xs-6"><span>12.500 GRACIAS</span><img src="img/23.jpg" alt="Logo de la compañía" /></div>
-        <div class="visible-md visible-lg col-md-2 col-xs-6"><span>COPA DEL REY</span><img src="img/24.jpg" alt="Logo de la compañía" /></div>
-        <div class="visible-md visible-lg col-md-2 col-xs-6"><span>MARATÓN DIVINA PASTORA</span><img src="img/22.jpg" class="img-responsive" /></div>
-        <div class="visible-md visible-lg col-md-2 col-xs-6"><span>EUTICO, EN BUSCA DE LOS CAMPOS ELÍSEOS</span><img src="img/25.jpg" class="img-responsive" /></div>
+        <div class="visible-md visible-lg col-md-offset-2 col-md-2 col-xs-12"><span>VLC "Una ciudad para perderse"</span><img src="img/21.jpg" alt="Logo de la compañía" /></div>
+        <div class="visible-md visible-lg col-md-2 col-xs-12"><span>12.500 GRACIAS</span><img src="img/23.jpg" alt="Logo de la compañía" /></div>
+        <div class="visible-md visible-lg col-md-2 col-xs-12"><span>COPA DEL REY</span><img src="img/24.jpg" alt="Logo de la compañía" /></div>
+        <div class="visible-md visible-lg col-md-2 col-xs-12"><span>MARATÓN DIVINA PASTORA</span><img src="img/22.jpg" class="img-responsive" /></div>
+        <div class="visible-md visible-lg col-md-2 col-xs-12"><span>EUTICO, EN BUSCA DE LOS CAMPOS ELÍSEOS</span><img src="img/25.jpg" class="img-responsive" /></div>
       </div>
 
 
